--- a/pokeWeb/index.html
+++ b/pokeWeb/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
+<body id="body">
     <script src="pokeWeb.js"></script>
 </body>
 </html>
