último paso ejer4

--- a/pokeWeb/cart.html
+++ b/pokeWeb/cart.html
@@ -8,6 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="pokeWeb.js"></script>
+    <script src="cart.js"></script>
 </body>
 </html>
